# dani-servant-lucid2

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dani-servant-lucid2.cabal
.github/workflows/: haskell-ci.yml
lib-api/Servant/API/ContentTypes/: Lucid.hs
lib-server/Servant/Server/: Lucid.hs
lib/Servant/API/ContentTypes/: Lucid.hs
test/: tests.hs
