cabal-version:      3.4
name:               dani-servant-lucid2
version:            0.1.0.0
synopsis:           Servant support for lucid2
-- description:
homepage:           https://github.com/danidiaz/dani-servant-lucid2
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
tested-with: GHC==9.8.1 GHC==9.2.8

common basic
    ghc-options: -Wall
    default-language: GHC2021
    build-depends:    
        base >=4.9 && <5

library
    import: basic
    exposed-modules:  
        MyLib
    reexported-modules: 
        Servant.API.ContentTypes.Lucid
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   lib
    build-depends:    
        dani-servant-lucid2:api

library api
    import: basic
    exposed-modules:  
        Servant.API.ContentTypes.Lucid
    hs-source-dirs: lib-api
    visibility: public